<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Teleporter</string>

    <string name="search_hint">Where to beam today?</string>
    <string name="search_label">Station, Address, Name,..</string>
    <string name="search_settings_description">Places to beam..</string>

    <string name="tv_rideview_departure_label">ab</string>
    <string name="tv_rideview_arrival_label">an</string>
    <string name="tv_rideview_in_label">in</string>
    <string name="tv_rideview_hours_label">h</string>
    <string name="tv_rideview_minutes_label">min</string>

    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_refresh">Refresh</string>

    <string name="scorefactor_fun">Fun</string>
    <string name="scorefactor_money">Money</string>
    <string name="scorefactor_speed">Speed</string>
    <string name="scorefactor_ecology">Eco</string>
    <string name="scorefactor_social">Social</string>

    <string name="dialog_yes">Yeah!</string>
    <string name="dialog_no">Nö!</string>

    <string name="autocompletion_settings_summary">cities, streets, stations, etc.</string>
    <string name="plugIns_settings_summary">search results..</string>
    <string name="downloads_activity_titel">Autocompletion downloads</string>
    <string name="downloads_fetch_progress">downloads for this area..</string>
    <string name="downloading_prog_dnld">is beeing gedowngeloadedet..</string>
    <string name="downloading_prog_indx">is beeing geindexifiziert..</string>
    <string name="download_error">Meest! something went wrong da</string>
</resources>
