<?xml version="1.0" encoding="utf-8"?>

<view class="de.andlabs.teleporter.RideView"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="?android:attr/listPreferredItemHeight"
  	android:layout_width="fill_parent"
	android:padding="0dip">

	<TextView
		android:id="@+id/tv_rideview_departure_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:textSize="11dip"
		android:paddingTop="3dip"
		android:paddingLeft="8dip"
		android:textColor="#77FFFFFF"
		android:text="@string/tv_rideview_departure_label" />
	<TextView
		android:id="@+id/tv_rideview_departure"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true" 
		android:layout_alignBaseline="@id/tv_rideview_departure_label"
		android:layout_toRightOf="@id/tv_rideview_departure_label"
		android:textSize="16dip"
		android:textStyle="bold"
		android:paddingLeft="3dip"
		android:textColor="#77FFFFFF"
		android:text="\?"/>
		
	<TextView
		android:id="@+id/tv_rideview_in_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:textSize="11dip"
		android:paddingLeft="9dip"
		android:paddingBottom="3dip"
		android:textColor="#77FFFFFF"
		android:text="@string/tv_rideview_in_label" />
	<TextView
		android:id="@+id/tv_rideview_hours"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tv_rideview_in_label"
		android:layout_alignBaseline="@id/tv_rideview_in_label"
		android:textSize="46dip"
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:text="\?" />
	<TextView
		android:id="@+id/tv_rideview_hours_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tv_rideview_hours"
		android:layout_alignBaseline="@id/tv_rideview_hours"
		android:textSize="11dip"
		android:textColor="#77FFFFFF"
		android:paddingLeft="-3dip"
		android:text="@string/tv_rideview_hours_label" />
	<TextView
		android:id="@+id/tv_rideview_minutes"
		android:textSize="46dip"
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:paddingLeft="3dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tv_rideview_hours_label"
		android:layout_alignBaseline="@id/tv_rideview_in_label"
		android:text="\?" />
	<TextView
		android:id="@+id/tv_rideview_minutes_label"
		android:textSize="11dip"
		android:textColor="#77FFFFFF"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/tv_rideview_minutes"
		android:layout_alignBaseline="@id/tv_rideview_minutes"
		android:text="@string/tv_rideview_minutes_label" />
	
	<TextView
		android:id="@+id/tv_rideview_duration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_rideview_minutes" 
		android:textSize="11dip"
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:paddingLeft="161dip"
		android:text="\?"/>
		
	<TextView
		android:id="@+id/tv_rideview_arrival"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignParentTop="true"
		android:textSize="25dip"
		android:textStyle="bold"
		android:textColor="#FFFFFF"
		android:paddingRight="7dip" />
	<TextView
		android:id="@+id/tv_rideview_arrival_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBaseline="@id/tv_rideview_departure_label"
		android:layout_toLeftOf="@id/tv_rideview_arrival"
		android:text="@string/tv_rideview_arrival_label"
		android:textSize="11dip"
		android:paddingRight="5dip"
		android:textColor="#77FFFFFF" />
		
	<ImageView
		android:id="@+id/tv_rideview_currency"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@id/tv_rideview_in_label" 
		android:layout_alignRight="@id/tv_rideview_arrival"
		android:paddingRight="5dip"
		android:paddingBottom="3dip"
		android:src="@drawable/currency"/>
	<TextView
		android:id="@+id/tv_rideview_price"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toLeftOf="@id/tv_rideview_currency"
		android:layout_alignBaseline="@id/tv_rideview_in_label" 
		android:textSize="16dip"
		android:textStyle="bold"
		android:paddingRight="2dip"
		android:textColor="#88000000"/>
</view>
